--- a/index.css
+++ b/index.css
@@ -19,4 +19,32 @@
 .nav-items > ul > li {
     padding: 10px;
     margin: 10px;
-} 
+}
+.res-card {
+  width: 200px;
+  height: 300px;
+  border: 1px solid black;
+  box-sizing: border-box;
+  padding: 5px;
+  margin: 5px;
+  display: flex;
+  flex-direction: column;
+}
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.res-logo {
+  width: 100%;
+  height: 160px;
+  object-fit: cover;
+}
+
+.res-card h4 {
+  margin: 2px 0;
+  font-size: 14px;
+  /* text-align: center; */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
