--- a/index.css
+++ b/index.css
@@ -49,3 +49,13 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.shimmer-card {
+  height: 300px;
+  width: 200px;
+  margin: 20px;
+  background-color: #f0f0f0;
+}
